intel/bench_214/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multCTQC_with_main/log.txt
bench_214/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multCTQC_with_main/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multCTQC_with_main.c:39:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const Gx1;
                ^
                    = nullptr
bench_214/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multCTQC_with_main/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multCTQC_with_main.c:40:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const Gx2;
                ^
                    = nullptr
2 errors generated.
HLS FPGA Parse FAILED.
